<resources>
    <string name="app_name">NMNewsAgency</string>
    <string name="locreq">Location Required</string>
    <string name="locc">28dp</string>
    <string name="home">Home</string>
    <string name="on">ON</string>
    <string name="logout">Logout</string>
    <string name="whenwifi">When Wifi On</string>
    <string name="off">OFF</string>
    <string name="rejected">Rejected    ?</string>
    <string name="presid">Press ID Card</string>
    <string name="pancard">Pan Card</string>
    <string name="bakpass">Bank Passbook</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="srname">Surename</string>
    <string name="usname">Username</string>
    <string name="count">Count</string>
    <string name="addvideo1">Upload Live Video with Mobile Camera </string>
    <string name="loreamtotaltext">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="posttype">POST TYPE</string>
    <string name="chnge">Change</string>
    <string name="galey1">Select the Video from your Device</string>
    <string name="adrew">\@</string>
    <string name="submit">Submit</string>
    <string name="dlete">Delete</string>
    <string name="report">Report</string>
    <string name="remaing">Remaining : 120</string>
    <string name="writeheading">Write a heading</string>
    <string name="score">Score</string>
    <string name="other">Other</string>
    <string name="brekingnews">Breaking News</string>
    <string name="choseplace">Choose Your Place</string>
    <string name="addvoice">Add Your Voice</string>
    <string name="sexualcontent">Sexual Content</string>
    <string name="violnce">Violent or repulsive content</string>
    <string name="hateful">Hateful or abusive content</string>
    <string name="harmful">Harmful or dangerous acts</string>
    <string name="spam">Spam or misleading</string>
    <string name="dumy1">of the printing and typesetting industry</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="itislong">All content in this video is self-shot</string>
    <string name="loream11">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="newvideo">New Video</string>
    <string name="givesugetion">Give Suggestions</string>
    <string name="loreadumy">Did not shoot the content in this video</string>
    <string name="vidreprsn">Video Report Reason</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="editprofile">Edit Profile</string>
    <string name="performancereporter">Performance Reporter</string>
    <string name="dumytext">Lorem Ipsum is simply dummy text</string>
    <string name="typeamessage">Type a message</string>
    <string name="typeacom">Type a comments</string>
    <string name="uploaddoc">Upload Documents</string>
    <string name="covragequality">Coverage quality score</string>
    <string name="search">Search</string>
    <string name="mesage">Message</string>
    <string name="gat">Gat</string>
    <string name="seting">Settings</string>
    <string name="folowers">Followers</string>
    <string name="folowing">Following</string>
    <string name="notiitem">IPL: कमिंस ने पहले लुटाए रन, फिर बल्ले से कर दी चौके-छक्के की बरसात 2h</string>
    <string name="serchpeople">\@meenakshisharma</string>
    <string name="hashtagdetail">\#jai_nishad_raj</string>
    <string name="profileid">\@ashokpanwartv</string>
    <string name="hashtag">Popular Hashtag</string>
    <string name="hashtagusers">Popular Users</string>
    <string name="hashtagvideo">Trending Videos</string>
    <string name="homestate">Rajasthan, India</string>
    <string name="homedate">11:45 pm Apr 21, 2021</string>
    <string name="titlehome">IPL: कमिंस ने पहले लुटाए रन, फिर बल्ले से कर दी चौके-छक्के की बरसात</string>
    <string name="hometitle">Meenakshi Sharma</string>
    <string name="noti">Notification</string>
    <string name="autoplay">Auto Play</string>
    <string name="chngedist">Change District </string>
    <string name="shareap">Share App </string>
    <string name="rateap">Rate App </string>
    <string name="fedback">Feedback</string>
    <string name="termcon">Terms and Conditions </string>
    <string name="pripoli">Privacy and Policy</string>
    <string name="follow">Follow</string>
    <string name="searchitem">Search people and tags</string>
    <string name="homesubtitle">My main focus to research, write, and report...</string>
    <string name="profile">Profile</string>
    <string name="loccsub">We need your location to curate nearby stories for you.</string>
    <string name="loccsub1">nearby stories for you.</string>
    <string name="locbut">Give Permission</string>
    <string name="locbut1">Select Location Manually</string>
    <string name="selctcoun">Select your country!</string>
    <string name="selctcoun1">You can change this later in settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pleaseWait">Please Wait .....</string>
    <string name="permissionString">We need permission to show better result . It\'s Compulsory.</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">502114654436471</string>
    <string name="fb_login_protocol_scheme">fb502114654436471</string>
    <string name="google_mapskey" templateMergeStrategy="preserve" translatable="false">AIzaSyAlVPWqpH2XbSPRBAuxYmlCougC0k5-stA</string>
    <string name="pleaseEnteremail">Please enter email</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="reconnect_failed">Reconnecting Failed</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="error_leave_chat">Error leaving room</string>
    <string name="dlg_retry">Retry</string>
    <string name="login_chat_login_error">Login to Chat error. Please relogin. </string>
    <string name="login_toolbar_title">Enter to chat</string>
    <string name="login_sign_up_error">Sign up error.</string>
    <string name="error_connection">Connection failed. Please check your internet connection.</string>
    <string name="error_response_timeout">No response received within reply timeout</string>
    <string name="no_server_connection">Server connection timeout</string>
    <string name="error_load_image">Error load image</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="new_chat_created">%s created the group chat \"%s\"</string>
    <string name="occupant_added">%s added %s</string>
    <string name="occupant_left">%s has left</string>
    <string name="error_attachment_corrupted">Attachment is corrupted</string>
    <string name="error_attachment_size">The uploaded file exceeds maximum file size (100MB)</string>
    <string name="error_forwarding_not_connected">Unable to forward message. Not Connected to Chat</string>
    <string name="error_attachment_count">You can send 1 attachment per message</string>
    <string name="error_logout">Unable to Logout: </string>
    <string name="error_joining_chat">Unable to Join chat</string>
    <string name="error_getting_chat_service">Unable to get Chat Service</string>
    <string name="field_name_user_login">User name</string>
    <string name="field_name_user_fullname">User Full Name</string>
    <string name="typing_postfix_singular">is typing…</string>
    <string name="typing_postfix_plural">are typing…</string>
    <string name="typing_ellipsis">…</string>
    <string name="dialogs_logged_in_as">Logged in as %s</string>
    <string name="dialogs_cannot_delete_chat">You can not leave from dialog %s</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dialogs_actionmode_title">Delete Chats</string>
    <string name="dialogs_actionmode_subtitle">%s chats selected</string>
    <string name="dialogs_actionmode_subtitle_single">%s chat selected</string>
    <string name="chat_send_message_error">Failed to send a message</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">Quickblox Chat Notification</string>
    <string name="chat_info_subtitle">%s members</string>
    <string name="chat_info_add_people_error">Add people errors</string>
    <string name="chat_info_updating">Updating…</string>
    <string name="dlg_loading">Loading</string>
    <string name="dlg_relogin">Relogin</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_hide">Hide</string>
    <string name="dlg_choose_file_from">Select file from…</string>
    <string name="dlg_sending">Sending…</string>
    <string name="create_chat">Creating chat…</string>
    <string name="dlg_deleting_chats">Deleting chats…</string>
    <string name="dlg_updating">Updating…</string>
    <string name="dlg_delete_private_dialog">Delete dialog</string>
    <string name="dlg_delete_private_question">Are you sure you want to leave dialog?</string>
    <string name="dlg_leave_group_dialog">Leave dialog</string>
    <string name="dlg_leave_group_question">Are you sure you want to leave dialog?</string>
    <string name="dlg_delete_question">Are you sure you want to delete dialogs?</string>
    <string name="dlg_leave">Leave</string>
    <string name="dlg_delete">Delete</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="chat_still_joining">You\'re still joining a group chat, please wait a bit</string>
    <string name="chat_error_send_message">Can\'t send a message, You are not connected to chat</string>
    <string name="update_dialog_error">Update Dialog error</string>
    <string name="placeholder_username_you">%s (you)</string>
    <string name="error_recreate_session">Login Chat error</string>
    <string name="select_users_search_hint">Search</string>
    <string name="select_users_create_chat_title">New Chat</string>
    <string name="select_users_create_chat_subtitle">%s users selected</string>
    <string name="select_users_create_chat_subtitle_single">%s user selected</string>
    <string name="select_users_edit_chat">Add Occupants</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_get_dialog_error">Error getting dialog from server</string>
    <string name="select_users_get_users_dialog_error">Error getting users dialog from server</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>
    <string name="select_users_not_found">No user with that name</string>
    <string name="menu_chat_info">Chat Info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
</resources>