<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.SettingActivity">

        <LinearLayout
            android:id="@+id/lin_searchwithedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible"
            tools:context=".fragment.HomeFragment">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/iamge_back_seting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_iconly_light_arrow___left"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/search_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/sarabun_bold"
                    android:text="@string/seting"
                    android:textColor="@color/loctitle"
                    android:textSize="19sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/msgview" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img_iconnoti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_noti"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img_iconnoti"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/noti"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                app:theme="@style/Color1SwitchStyle"
                android:id="@+id/chkState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_autoplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                app:srcCompat="@drawable/ic_auto_play"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/img_autoplay"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/autoplay"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/lin_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/img_autoplay"
                    android:fontFamily="@font/sarabun_semibold"
                    android:text="@string/on"
                    android:textColor="@color/hashtagfolow"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@drawable/ic_arrow___down_2"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/chngedist"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_setng_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/sarabun_semibold"
                android:text="Jaipur"
                android:textColor="@color/hashtagfolow"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rel_uploaddoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/uploaddoc"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/shareap"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/rateap"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/fedback"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/termcon"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/sarabun_semibold"
                android:text="@string/pripoli"
                android:textColor="@color/loctitle"
                android:textSize="20sp" />
        </RelativeLayout>
        <Button
            android:layout_marginBottom="10dp"
            android:id="@+id/but_logout"
            android:layout_marginTop="20dp"
            android:background="@drawable/searchtopbar"
            android:textSize="18sp"
            android:fontFamily="@font/sarabun_regular"
            android:textColor="@color/loctitle"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout">

        </Button>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>